--- a/BeaconCharity/Base.lproj/Main.storyboard
+++ b/BeaconCharity/Base.lproj/Main.storyboard
@@ -108,9 +108,6 @@
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="寄付進捗：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2B2-RD-MeL">
                                 <rect key="frame" x="258" y="373" width="85" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="hHi-Ds-pWc"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -127,53 +124,36 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="charity_heart" translatesAutoresizingMaskIntoConstraints="NO" id="S9E-Zq-6U3">
-                                <rect key="frame" x="189" y="373" width="204" height="219"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lNf-4K-uwg" customClass="M13ProgressViewImage">
+                                <rect key="frame" x="189" y="396" width="204" height="166"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="204" id="1Ed-HK-3pb"/>
-                                    <constraint firstAttribute="height" constant="180" id="8Oi-2r-bdl"/>
-                                    <constraint firstAttribute="width" constant="180" id="Ne3-8E-pRZ"/>
+                                    <constraint firstAttribute="width" constant="204" id="IVG-hh-1WF"/>
                                 </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="8Oi-2r-bdl"/>
-                                        <exclude reference="Ne3-8E-pRZ"/>
-                                    </mask>
-                                </variation>
-                            </imageView>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="S9E-Zq-6U3" firstAttribute="top" secondItem="pt0-sb-x8P" secondAttribute="bottom" constant="19" id="1WA-QL-Elz"/>
-                            <constraint firstItem="Qvw-Cm-dSb" firstAttribute="top" secondItem="S9E-Zq-6U3" secondAttribute="bottom" constant="8" symbolic="YES" id="1ut-bY-DWo"/>
-                            <constraint firstItem="S9E-Zq-6U3" firstAttribute="top" secondItem="pt0-sb-x8P" secondAttribute="bottom" constant="19" id="3UK-0u-4u8"/>
                             <constraint firstItem="pt0-sb-x8P" firstAttribute="top" secondItem="tUe-y7-FFI" secondAttribute="bottom" constant="23" id="ENg-W6-1ui"/>
+                            <constraint firstItem="2B2-RD-MeL" firstAttribute="centerX" secondItem="pt0-sb-x8P" secondAttribute="centerX" id="IcB-iG-Ycu"/>
                             <constraint firstItem="pt0-sb-x8P" firstAttribute="leading" secondItem="tUe-y7-FFI" secondAttribute="leading" id="KXU-Jn-Yaw"/>
+                            <constraint firstItem="l2c-di-7GL" firstAttribute="top" secondItem="lNf-4K-uwg" secondAttribute="bottom" constant="8" id="M88-tZ-ujv"/>
+                            <constraint firstAttribute="centerX" secondItem="lNf-4K-uwg" secondAttribute="centerX" constant="9" id="N4g-GJ-agt"/>
                             <constraint firstItem="l2c-di-7GL" firstAttribute="bottom" secondItem="Qvw-Cm-dSb" secondAttribute="top" id="NGe-KS-yjI"/>
+                            <constraint firstItem="lNf-4K-uwg" firstAttribute="top" secondItem="2B2-RD-MeL" secondAttribute="bottom" constant="2" id="POi-b8-Kuz"/>
                             <constraint firstItem="tUe-y7-FFI" firstAttribute="trailing" secondItem="pt0-sb-x8P" secondAttribute="trailing" id="RWc-uh-DVu"/>
-                            <constraint firstItem="2B2-RD-MeL" firstAttribute="top" secondItem="S9E-Zq-6U3" secondAttribute="top" id="Uht-CY-T5d"/>
-                            <constraint firstAttribute="centerX" secondItem="S9E-Zq-6U3" secondAttribute="centerX" constant="9" id="Ylk-CM-lUS"/>
+                            <constraint firstAttribute="centerY" secondItem="lNf-4K-uwg" secondAttribute="centerY" constant="-179" id="ULb-pH-ve9"/>
+                            <constraint firstItem="2B2-RD-MeL" firstAttribute="top" secondItem="pt0-sb-x8P" secondAttribute="bottom" constant="19" id="WEh-Oj-Yc5"/>
                             <constraint firstItem="pt0-sb-x8P" firstAttribute="leading" secondItem="f6M-aa-IhL" secondAttribute="leadingMargin" id="fCz-v9-1OU"/>
                             <constraint firstItem="l2c-di-7GL" firstAttribute="leading" secondItem="f6M-aa-IhL" secondAttribute="leading" id="gJW-kT-ZjG"/>
-                            <constraint firstItem="l2c-di-7GL" firstAttribute="centerX" secondItem="S9E-Zq-6U3" secondAttribute="centerX" id="gvR-K4-7sd"/>
-                            <constraint firstItem="l2c-di-7GL" firstAttribute="top" secondItem="S9E-Zq-6U3" secondAttribute="bottom" constant="17" id="j7z-VY-2dq"/>
-                            <constraint firstAttribute="centerY" secondItem="S9E-Zq-6U3" secondAttribute="centerY" constant="-182.5" id="llQ-bc-rFV"/>
-                            <constraint firstItem="pt0-sb-x8P" firstAttribute="centerX" secondItem="2B2-RD-MeL" secondAttribute="centerX" id="qQ3-Fm-4QQ"/>
                             <constraint firstAttribute="trailing" secondItem="l2c-di-7GL" secondAttribute="trailing" id="rGd-dM-YpN"/>
                             <constraint firstItem="tUe-y7-FFI" firstAttribute="top" secondItem="Zm9-eH-Ze9" secondAttribute="bottom" id="sk8-0w-hII"/>
-                            <constraint firstItem="S9E-Zq-6U3" firstAttribute="centerX" secondItem="pt0-sb-x8P" secondAttribute="centerX" id="vLq-dN-bf3"/>
-                            <constraint firstItem="2B2-RD-MeL" firstAttribute="centerX" secondItem="l2c-di-7GL" secondAttribute="centerX" id="zDT-jV-iCg"/>
+                            <constraint firstItem="2B2-RD-MeL" firstAttribute="centerX" secondItem="l2c-di-7GL" secondAttribute="centerX" id="xUW-HS-Cfd"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="3UK-0u-4u8"/>
-                                <exclude reference="vLq-dN-bf3"/>
-                                <exclude reference="gvR-K4-7sd"/>
-                                <exclude reference="j7z-VY-2dq"/>
-                            </mask>
-                        </variation>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="progressImageView" destination="lNf-4K-uwg" id="CMh-Xi-ntc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DfZ-4Y-aAL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -301,10 +281,9 @@
     </scenes>
     <resources>
         <image name="4StarsSmall" width="81" height="15"/>
-        <image name="charity_heart" width="272" height="237"/>
         <image name="headerImage" width="1078" height="539"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="i9Q-0S-kgr"/>
+        <segue reference="wMo-QR-mVP"/>
     </inferredMetricsTieBreakers>
 </document>
